# watermarking_contrastive_learning

./: .gitignore  compare_models.py  detector.py  dev_sample_rate_counts.json  embedder.py  finetune_quality_part_dataset.py  finetune_quality_part_dataset_cl.py  lj_speech_process_dataset.py  pyproject.toml  requirements.txt  save_audios.py  test.py  train.py  train_cl.py  train_contrastive.py  train_part_dataset.py  train_part_dataset_cl.py
config/: cl_pt_decoder.yaml  contrastive_decoder.yaml  contrastive_pretrain.yaml  finetune_train_part.yaml  finetune_train_part_cl.yaml  model.yaml  process.yaml  process_lj.yaml  train.yaml  train_contrastive.yaml  train_part.yaml  train_part_cl.yaml
data/: contrastive_dataset.py  dataset.py  lj_chunk_dataset.py  lj_dataset.py
distortions/: attack_performer.py  attacks.py  cl_augmentations.py  mel.py  some_attacks.py
distortions/attacks/attacks/: base_attack.py
distortions/attacks/attacks/additive_noise/: attack.py  (+1 more)
loss/: balancer.py  contrastive_loss.py  loss.py  loss_gradient_scaling.py
model/: blocks.py  cl_pt_decoder.py  contrastive_decoder.py  decoder.py  detector.py  discriminator.py  embedder.py  frequency.py  metrics_tracker.py  utils.py
model_timbre/: conv2_mel_modules.py  conv2_mel_modules_ab.py  modules.py
python_notebooks/: train.ipynb  train_cl.ipynb  train_contrastive.ipynb
save_audio_scripts/: save_audios_cl_augment.py
shell_scripts/: download_lj.sh  install_python_3.12.sh
train/: contrastive_pretrain_decoder.py  train_lj.py  train_lj_cl.py  train_lj_cl_gradient_scaling.py  train_lj_gradient_scaling.py  train_part_dataset.py  train_part_dataset_cl.py  train_whole_dataset.py
(+61 files in other folders)
